--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -115,6 +115,11 @@ include(cmake/Win_install.cmake)
 # --------------------------------------------------------------------
 # Package Step
 # --------------------------------------------------------------------
+add_custom_target(Package
+        COMMAND ${CMAKE_COMMAND} -DCOMPONENT=Package -P cmake_install.cmake
+        DEPENDS Gorgon
+        )
+        
 if(APPLE)
     include(cmake/Mac_package.cmake)
 elseif(WIN32)
@@ -129,7 +134,4 @@ else()
         )
 endif()
 
-add_custom_target(Package
-        COMMAND ${CMAKE_COMMAND} -DCOMPONENT=Package -P cmake_install.cmake
-        )
 # --------------------------------------------------------------------
