--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -121,6 +121,7 @@ else()
                                                         --distpath=${package_dir}
                                                         --clean -y
         WORKING_DIRECTORY ${run_dir})"
+        DEPENDS Gorgon
         COMPONENT "Package"
         )
 endif()
