add_subdirectory: src

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -66,6 +66,7 @@ include_directories(${GORGON_INCLUDE_DIRS})
 ADD_LIBRARY(${legacy_trgt_name} MODULE ${CMAKE_BINARY_DIR}/src/LibPyGorgon.cpp)
 target_link_libraries(${legacy_trgt_name} ${GORGON_LIBRARIES})
 
+add_subdirectory(src)
 # --------------------------------------------------------------------
 # C++11 flags
 # --------------------------------------------------------------------
