update source location vars: SOURCE_DIR <-> CURRENT_SOURCE_DIR

--- a/legacy/CMakeLists.txt
+++ b/legacy/CMakeLists.txt
@@ -9,7 +9,7 @@ configure_file(${CMAKE_CURRENT_SOURCE_DIR}/setup.py.in
         ${CMAKE_BINARY_DIR}/setup_legacy.py
         )
 # --------------------------------------------------------------------
-install(DIRECTORY ${CMAKE_SOURCE_DIR}/Gorgon/src_py/
+install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/Gorgon/src_py/
         DESTINATION ${CMAKE_BINARY_DIR}/bin/legacy
         COMPONENT Legacy
         FILES_MATCHING
