--- a/legacy/Gorgon/src_py/gorgon.pyw.in
+++ b/legacy/Gorgon/src_py/gorgon.pyw.in
@@ -25,7 +25,7 @@ from main_window_form import MainWindowForm
 import time
 
 
-if __name__ == '__main__':
+def main():
     gorgonVersion = '@Gorgon_VERSION@'
     app = QtGui.QApplication(sys.argv)    
     #setting different font sizes for different OSs
@@ -50,3 +50,5 @@ if __name__ == '__main__':
     window.loadPlugins()
     sys.exit(app.exec_())
     
+if __name__ == '__main__':
+    main()
