fix call: include(cmake/Windows/init.cmake)
move top init call into Windows/init/cmake

--- a/legacy/CMakeLists.txt
+++ b/legacy/CMakeLists.txt
@@ -1,5 +1,6 @@
 init()
 
+include(cmake/Windows/init.cmake)
 # --------------------------------------------------------------------
 configure_file(${CMAKE_CURRENT_SOURCE_DIR}/Gorgon/src_py/gorgon.pyw.in
         ${CMAKE_BINARY_DIR}/bin/legacy/gorgon.py
