set architecture with conda env var

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,11 +21,7 @@ option(ENABLE_CMAKE_DEBUG_OUTPUT "Print output of some variables for debugging p
 
 set(GORGON_EXTERNAL_LIBRARIES_DIR ${CMAKE_SOURCE_DIR}/ExternalLibraries CACHE INTERNAL "External Libraries directory")
 
-if( CMAKE_SIZEOF_VOID_P EQUAL 8 )
-    set( GORGON_TARGET_ARCH 64 CACHE INTERNAL "Target architecture")
-else()
-    set( GORGON_TARGET_ARCH 32 CACHE INTERNAL "Target architecture")
-endif()
+set( GORGON_TARGET_ARCH $ENV{ARCH} CACHE INTERNAL "Target architecture")
 
 set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -DGORGON_DEBUG")
 
