--- a/legacy/CMakeLists.txt
+++ b/legacy/CMakeLists.txt
@@ -8,6 +8,8 @@ configure_file(${CMAKE_CURRENT_SOURCE_DIR}/Gorgon/src_py/gorgon.pyw.in
 configure_file(${CMAKE_CURRENT_SOURCE_DIR}/setup.py.in
         ${CMAKE_BINARY_DIR}/setup_legacy.py
         )
+
+file(WRITE ${CMAKE_BINARY_DIR}/bin/__init__.py)
 # --------------------------------------------------------------------
 install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/Gorgon/src_py/
         DESTINATION ${CMAKE_BINARY_DIR}/bin/legacy
