--- a/legacy/setup.py.in
+++ b/legacy/setup.py.in
@@ -3,12 +3,12 @@ from setuptools import setup
 setup(
     name="gorgon-legacy",
     version="@Gorgon_VERSION@",
-    package_dir={'gorgon':'bin'},
-    packages=['gorgon', 'gorgon.legacy', 'gorgon.legacy.correspondence', 'gorgon.legacy.plugins', 'gorgon.legacy.seq_model'],
-    package_data={'gorgon.legacy':['libpylegacy.so', 'libpylegacy.pyd']},
+    package_dir={'gorglib':'bin'},
+    packages=['gorglib', 'gorglib.legacy', 'gorglib.legacy.correspondence', 'gorglib.legacy.plugins', 'gorglib.legacy.seq_model'],
+    package_data={'gorglib.legacy':['libpylegacy.so', 'libpylegacy.pyd']},
     entry_points={
         'console_scripts': [
-            'gorgon-legacy=gorgon.legacy.gorgon:main',
+            'gorgon-legacy=gorglib.legacy.main:main',
         ],
     },
     zip_safe = False,
