--- a/legacy/CMakeLists.txt
+++ b/legacy/CMakeLists.txt
@@ -2,7 +2,7 @@ init()
 
 include(cmake/Windows/init.cmake)
 # --------------------------------------------------------------------
-configure_file(${CMAKE_CURRENT_SOURCE_DIR}/Gorgon/src_py/gorgon.pyw.in
+configure_file(${CMAKE_CURRENT_SOURCE_DIR}/Gorgon/src_py/gorgon.py
         ${CMAKE_BINARY_DIR}/bin/legacy/main.py
         )
 
